--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Air Checker" />
+    <meta name="author" content="Julio Quezada" />
     <meta
       name="description"
       content="Web site created using create-react-app"
